# OVO_Aus_api

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  DASHBOARD_GUIDE.md  HACS_INSTALLATION.md  OVO_AU_API_DOCUMENTATION.md  QUICK_START.md  README.md  dashboard_example.yaml  dashboard_monthly_charges.yaml  dashboard_rate_breakdown.yaml  dashboard_simple.yaml  hacs.json  info.md  install.sh  ovo_australia_client.py  pyproject.toml  requirements.txt  test_integration.py
.github/workflows/: backfill-v4.1.1.yml  ci.yml  cut-v4.1.1.yml  release.yml
blueprints/automation/: ovo_daily_savings_notification.yaml
custom_components/ovo_energy_au/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  models.py  ovo_client.py  ovo_client.py.backup  sensor.py  services.yaml  strings.json
custom_components/ovo_energy_au/analytics/: __init__.py  hourly.py  insights.py  interval.py
custom_components/ovo_energy_au/graphql/: __init__.py  queries.py
custom_components/ovo_energy_au/sensors/: __init__.py  base.py  (+1 more)
docs/dashboards/: dashboard_example.yaml  dashboard_hourly.yaml  dashboard_monthly_charges.yaml  dashboard_simple.yaml
docs/guides/: BROWSER_TESTING_GUIDE.md  DASHBOARD_GUIDE.md  HA_BRANDS_SUBMISSION.md  OVO_AU_API_DOCUMENTATION.md  QUICK_START.md  ovo_australia_conversion_guide.md
home_assistant_example/: README.md
scripts/: deploy.sh  install.ps1
tests/: __init__.py  conftest.py  test_analytics.py  test_edge_cases.py  test_hourly_helpers.py  test_models.py  test_sensor_definitions.py
(+9 files in other folders)
